<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".exercice5Acts.ErreurActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_erreur"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/exercice5_textErreur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_nbErreur"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/exercice5_btnCorriger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_corriger" />

    <Button
        android:id="@+id/exercice5_btnAutreTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_autreTable"

        />
</LinearLayout>