<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".exercice5Acts.FelicitationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_felicitation"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/exercice5_btnAutreTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_autreTable" />

    <Button
        android:id="@+id/exercice5_btnAutreExo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice4_AutreExo" />
</LinearLayout>